--- a/index.html
+++ b/index.html
@@ -3,34 +3,31 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>塔机说明</title>
+    <title>康文昌的在线HTML 教学小工具</title>
     <style>  
       body {
         margin: 0;
       }
+      h3{color:red;}
+      p.mian{text-align:justify;}
     </style>
   </head>
   <body>
-	 <div style="
+   <div style="
    background-color:#f1f1f1;
    text-align:center;
    padding:40px;
    ">
-     <img src="https://ts1.cn.mm.bing.net/th?id=OIP-C.KOce2naJqpIbHyzxlAogGAHaES&w=328&h=190&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2" alt="qf" width="80" heigth="80">
+     <img src="https://s1.328888.xyz/2022/09/13/KAYRC.jpg" alt="眼镜" width="80px" height="80px">
    </div>
    <div style="
    max-width:700px;
    margin:30px auto;
    padding:15px;
-   line-heigth:1.7;
-   color:red;
+   line-height:1.7;
    ">
-     <p>TCT250 (TCT7020)</p>
-     <p>额定起重力矩(KN.m)2490，最大起重量12t，预埋螺栓固定式59M，预埋支腿固定式58M</p>
-     <p>32 条地脚螺栓及厚螺母 32 只，薄螺母 64 只</p>
-     <p>无标准节塔高14米，独立高度16节标准节。</p>
-     <p>2.0×2.0 米截面，外套，最大起重量 12 吨</p>
-     <p>计算方法为：计算高度的起重量=性能表中的起重量-每米钢丝绳的重 量(1.49kg/m)×(计算高度-59)×倍率</p>
+     <h3>眼镜是除了睡眠之外使用时长最长的物品之一，讨论这个问题挺有意义。我个人认为的优先排序如下：</h3>
+     <p class="mian"><b>1、</b>勤清洗。能及时清除镜片表面的灰尘、油脂、水渍等影响视觉品质的附着物，也能最大程度减轻镜片划伤，镜架腐蚀的问题。<b>2、</b>定时调整修护。很多人不知道眼镜验配的售后服务中，定时到专业验配商家清洗、镜架调整（也叫矫正变形）、更换发黄变质的鼻托等是很重要的售后服务内容之一，且是免费的服务。<b>3、</b>有螺丝松动（特别是无框眼镜）、不慎挤压变形等问题，要及时处理，请专业师傅帮忙修复。<b>4、</b>定时复查。如果度数变化，或者镜架变形严重无法复原的，应该及时验配品质可靠的眼镜。眼镜店不仅仅只是需要验配服务了才去，售后维护也需要专业师傅处理，且这部分服务是系统验配服务的重要组成部分，也是眼镜店分内的职责。</p>
    </div>
    <div style="
    background-color:#f1f1f1;
@@ -38,8 +35,8 @@
    padding:40px;
    font-size:12px;
    ">
-<p>我的网站</p>
-<a href="https://www.baidu.com">友情链接</a>
+   <p>我的网站</p>
+   <a href="www.baidu.com">友情链接</a>
    </div>
   </body>
 </html>
